parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ARROW
    BLOCK_COMMENT
    COLON
    COMMENT
    CONCAT_EQUALS
    DOUBLE_COLON
    MINUS_EQUALS
    NOT
    OR
    PHP_SHORT_OPEN
    PLUS_EQUALS
    QMARK

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> expression_statement
Rule 5     statement -> print_statement
Rule 6     statement -> if_statement
Rule 7     statement -> class_definition
Rule 8     statement -> php_open
Rule 9     statement -> php_close
Rule 10    statement -> while_statement
Rule 11    statement -> function_definition
Rule 12    statement -> for_statement
Rule 13    statement -> return_statement
Rule 14    expression_statement -> expression SEMI
Rule 15    php_open -> PHP_OPEN
Rule 16    php_close -> PHP_CLOSE
Rule 17    expression -> VARIABLE EQUALS expression
Rule 18    print_statement -> ECHO expression SEMI
Rule 19    if_statement -> IF LPAREN expression RPAREN block
Rule 20    if_statement -> IF LPAREN expression RPAREN block ELSE block
Rule 21    block -> LBRACE statement_list RBRACE
Rule 22    class_definition -> CLASS ID LBRACE class_body RBRACE
Rule 23    class_body -> class_body class_member
Rule 24    class_body -> class_member
Rule 25    class_body -> empty
Rule 26    class_member -> PUBLIC VARIABLE SEMI
Rule 27    class_member -> PRIVATE VARIABLE SEMI
Rule 28    class_member -> PROTECTED VARIABLE SEMI
Rule 29    class_member -> PUBLIC FUNCTION ID LPAREN parameter_list RPAREN block
Rule 30    class_member -> PRIVATE FUNCTION ID LPAREN parameter_list RPAREN block
Rule 31    class_member -> PROTECTED FUNCTION ID LPAREN parameter_list RPAREN block
Rule 32    class_member -> FUNCTION ID LPAREN parameter_list RPAREN block
Rule 33    while_statement -> WHILE LPAREN expression RPAREN block
Rule 34    parameter_list -> variable_list
Rule 35    parameter_list -> empty
Rule 36    variable_list -> variable_list COMMA VARIABLE
Rule 37    variable_list -> VARIABLE
Rule 38    function_definition -> FUNCTION ID LPAREN parameter_list RPAREN block
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression MODULO expression
Rule 44    expression -> expression POW expression
Rule 45    expression -> expression EQ expression
Rule 46    expression -> expression NOT_EQ expression
Rule 47    expression -> expression LT expression
Rule 48    expression -> expression GT expression
Rule 49    expression -> expression LTE expression
Rule 50    expression -> expression GTE expression
Rule 51    expression -> expression LAND expression
Rule 52    expression -> expression LOR expression
Rule 53    expression -> MINUS expression
Rule 54    expression -> LNOT expression
Rule 55    expression -> VARIABLE INC
Rule 56    expression -> VARIABLE DEC
Rule 57    expression -> LPAREN expression RPAREN
Rule 58    expression -> NUMBER
Rule 59    expression -> FLOAT
Rule 60    expression -> STRING
Rule 61    expression -> TRUE
Rule 62    expression -> FALSE
Rule 63    expression -> NULL
Rule 64    expression -> VARIABLE
Rule 65    expression -> LBRACKET array_elements RBRACKET
Rule 66    array_elements -> expression_list
Rule 67    array_elements -> empty
Rule 68    expression_list -> expression_list COMMA expression
Rule 69    expression_list -> expression
Rule 70    optional_expression -> expression
Rule 71    optional_expression -> empty
Rule 72    for_statement -> FOR LPAREN optional_expression SEMI optional_expression SEMI optional_expression RPAREN block
Rule 73    return_statement -> RETURN optional_expression SEMI
Rule 74    expression -> NEW ID LPAREN array_elements RPAREN
Rule 75    expression -> NEW ID
Rule 76    expression -> ID LPAREN array_elements RPAREN
Rule 77    expression -> VARIABLE LBRACKET expression RBRACKET
Rule 78    empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ARROW                : 
BLOCK_COMMENT        : 
CLASS                : 22
COLON                : 
COMMA                : 36 68
COMMENT              : 
CONCAT_EQUALS        : 
DEC                  : 56
DIVIDE               : 42
DOUBLE_COLON         : 
ECHO                 : 18
ELSE                 : 20
EQ                   : 45
EQUALS               : 17
FALSE                : 62
FLOAT                : 59
FOR                  : 72
FUNCTION             : 29 30 31 32 38
GT                   : 48
GTE                  : 50
ID                   : 22 29 30 31 32 38 74 75 76
IF                   : 19 20
INC                  : 55
LAND                 : 51
LBRACE               : 21 22
LBRACKET             : 65 77
LNOT                 : 54
LOR                  : 52
LPAREN               : 19 20 29 30 31 32 33 38 57 72 74 76
LT                   : 47
LTE                  : 49
MINUS                : 40 53
MINUS_EQUALS         : 
MODULO               : 43
NEW                  : 74 75
NOT                  : 
NOT_EQ               : 46
NULL                 : 63
NUMBER               : 58
OR                   : 
PHP_CLOSE            : 16
PHP_OPEN             : 15
PHP_SHORT_OPEN       : 
PLUS                 : 39
PLUS_EQUALS          : 
POW                  : 44
PRIVATE              : 27 30
PROTECTED            : 28 31
PUBLIC               : 26 29
QMARK                : 
RBRACE               : 21 22
RBRACKET             : 65 77
RETURN               : 73
RPAREN               : 19 20 29 30 31 32 33 38 57 72 74 76
SEMI                 : 14 18 26 27 28 72 72 73
STRING               : 60
TIMES                : 41
TRUE                 : 61
VARIABLE             : 17 26 27 28 36 37 55 56 64 77
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

array_elements       : 65 74 76
block                : 19 20 20 29 30 31 32 33 38 72
class_body           : 22 23
class_definition     : 7
class_member         : 23 24
empty                : 25 35 67 71
expression           : 14 17 18 19 20 33 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 57 68 69 70 77
expression_list      : 66 68
expression_statement : 4
for_statement        : 12
function_definition  : 11
if_statement         : 6
optional_expression  : 72 72 72 73
parameter_list       : 29 30 31 32 38
php_close            : 9
php_open             : 8
print_statement      : 5
program              : 0
return_statement     : 13
statement            : 2 3
statement_list       : 1 2 21
variable_list        : 34 36
while_statement      : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . expression_statement
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . class_definition
    (8) statement -> . php_open
    (9) statement -> . php_close
    (10) statement -> . while_statement
    (11) statement -> . function_definition
    (12) statement -> . for_statement
    (13) statement -> . return_statement
    (14) expression_statement -> . expression SEMI
    (18) print_statement -> . ECHO expression SEMI
    (19) if_statement -> . IF LPAREN expression RPAREN block
    (20) if_statement -> . IF LPAREN expression RPAREN block ELSE block
    (22) class_definition -> . CLASS ID LBRACE class_body RBRACE
    (15) php_open -> . PHP_OPEN
    (16) php_close -> . PHP_CLOSE
    (33) while_statement -> . WHILE LPAREN expression RPAREN block
    (38) function_definition -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (72) for_statement -> . FOR LPAREN optional_expression SEMI optional_expression SEMI optional_expression RPAREN block
    (73) return_statement -> . RETURN optional_expression SEMI
    (17) expression -> . VARIABLE EQUALS expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression MODULO expression
    (44) expression -> . expression POW expression
    (45) expression -> . expression EQ expression
    (46) expression -> . expression NOT_EQ expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LTE expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LAND expression
    (52) expression -> . expression LOR expression
    (53) expression -> . MINUS expression
    (54) expression -> . LNOT expression
    (55) expression -> . VARIABLE INC
    (56) expression -> . VARIABLE DEC
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . NUMBER
    (59) expression -> . FLOAT
    (60) expression -> . STRING
    (61) expression -> . TRUE
    (62) expression -> . FALSE
    (63) expression -> . NULL
    (64) expression -> . VARIABLE
    (65) expression -> . LBRACKET array_elements RBRACKET
    (74) expression -> . NEW ID LPAREN array_elements RPAREN
    (75) expression -> . NEW ID
    (76) expression -> . ID LPAREN array_elements RPAREN
    (77) expression -> . VARIABLE LBRACKET expression RBRACKET

    ECHO            shift and go to state 15
    IF              shift and go to state 16
    CLASS           shift and go to state 18
    PHP_OPEN        shift and go to state 20
    PHP_CLOSE       shift and go to state 21
    WHILE           shift and go to state 22
    FUNCTION        shift and go to state 23
    FOR             shift and go to state 24
    RETURN          shift and go to state 25
    VARIABLE        shift and go to state 26
    MINUS           shift and go to state 27
    LNOT            shift and go to state 28
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NULL            shift and go to state 34
    LBRACKET        shift and go to state 35
    NEW             shift and go to state 36
    ID              shift and go to state 19

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    expression_statement           shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    class_definition               shift and go to state 7
    php_open                       shift and go to state 8
    php_close                      shift and go to state 9
    while_statement                shift and go to state 10
    function_definition            shift and go to state 11
    for_statement                  shift and go to state 12
    return_statement               shift and go to state 13
    expression                     shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . expression_statement
    (5) statement -> . print_statement
    (6) statement -> . if_statement
    (7) statement -> . class_definition
    (8) statement -> . php_open
    (9) statement -> . php_close
    (10) statement -> . while_statement
    (11) statement -> . function_definition
    (12) statement -> . for_statement
    (13) statement -> . return_statement
    (14) expression_statement -> . expression SEMI
    (18) print_statement -> . ECHO expression SEMI
    (19) if_statement -> . IF LPAREN expression RPAREN block
    (20) if_statement -> . IF LPAREN expression RPAREN block ELSE block
    (22) class_definition -> . CLASS ID LBRACE class_body RBRACE
    (15) php_open -> . PHP_OPEN
    (16) php_close -> . PHP_CLOSE
    (33) while_statement -> . WHILE LPAREN expression RPAREN block
    (38) function_definition -> . FUNCTION ID LPAREN parameter_list RPAREN block
    (72) for_statement -> . FOR LPAREN optional_expression SEMI optional_expression SEMI optional_expression RPAREN block
    (73) return_statement -> . RETURN optional_expression SEMI
    (17) expression -> . VARIABLE EQUALS expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression MODULO expression
    (44) expression -> . expression POW expression
    (45) expression -> . expression EQ expression
    (46) expression -> . expression NOT_EQ expression
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LTE expression
    (50) expression -> . expression GTE expression
    (51) expression -> . expression LAND expression
    (52) expression -> . expression LOR expression
    (53) expression -> . MINUS expression
    (54) expression -> . LNOT expression
    (55) expression -> . VARIABLE INC
    (56) expression -> . VARIABLE DEC
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . NUMBER
    (59) expression -> . FLOAT
    (60) expression -> . STRING
    (61) expression -> . TRUE
    (62) expression -> . FALSE
    (63) expression -> . NULL
    (64) expression -> . VARIABLE
    (65) expression -> . LBRACKET array_elements RBRACKET
    (74) expression -> . NEW ID LPAREN array_elements RPAREN
    (75) expression -> . NEW ID
    (76) expression -> . ID LPAREN array_elements RPAREN
    (77) expression -> . VARIABLE LBRACKET expression RBRACKET

    $end            reduce using rule 1 (program -> statement_list .)
    ECHO            shift and go to state 15
    IF              shift and go to state 16
    CLASS           shift and go to state 18
    PHP_OPEN        shift and go to state 20
    PHP_CLOSE       shift and go to state 21
    WHILE           shift and go to state 22
    FUNCTION        shift and go to state 23
    FOR             shift and go to state 24
    RETURN          shift and go to state 25
    VARIABLE        shift and go to state 26
    MINUS           shift and go to state 27
    LNOT            shift and go to state 28
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 29
    FLOAT           shift and go to state 30
    STRING          shift and go to state 31
    TRUE            shift and go to state 32
    FALSE           shift and go to state 33
    NULL            shift and go to state 34
    LBRACKET        shift and go to state 35
    NEW             shift and go to state 36
    ID              shift and go to state 19

    statement                      shift and go to state 37
    expression_statement           shift and go to state 4
    print_statement                shift and go to state 5
    if_statement                   shift and go to state 6
    class_definition               shift and go to state 7
    php_open                       shift and go to state 8
    php_close                      shift and go to state 9
    while_statement                shift and go to state 10
    function_definition            shift and go to state 11
    for_statement                  shift and go to state 12
    return_statement               shift and go to state 13
    expression                     shift and go to state 14

state 3

    (3) statement_list -> statement .

    ECHO            reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    CLASS           reduce using rule 3 (statement_list -> statement .)
    PHP_OPEN        reduce using rule 3 (statement_list -> statement .)
    PHP_CLOSE       reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    FUNCTION        reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    VARIABLE        reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    LNOT            reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    STRING          reduce using rule 3 (statement_list -> statement .)
    TRUE            reduce using rule 3 (statement_list -> statement .)
    FALSE           reduce using rule 3 (statement_list -> statement .)
    NULL            reduce using rule 3 (statement_list -> statement .)
    LBRACKET        reduce using rule 3 (statement_list -> statement .)
    NEW             reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> expression_statement .

    ECHO            reduce using rule 4 (statement -> expression_statement .)
    IF              reduce using rule 4 (statement -> expression_statement .)
    CLASS           reduce using rule 4 (statement -> expression_statement .)
    PHP_OPEN        reduce using rule 4 (statement -> expression_statement .)
    PHP_CLOSE       reduce using rule 4 (statement -> expression_statement .)
    WHILE           reduce using rule 4 (statement -> expression_statement .)
    FUNCTION        reduce using rule 4 (statement -> expression_statement .)
    FOR             reduce using rule 4 (statement -> expression_statement .)
    RETURN          reduce using rule 4 (statement -> expression_statement .)
    VARIABLE        reduce using rule 4 (statement -> expression_statement .)
    MINUS           reduce using rule 4 (statement -> expression_statement .)
    LNOT            reduce using rule 4 (statement -> expression_statement .)
    LPAREN          reduce using rule 4 (statement -> expression_statement .)
    NUMBER          reduce using rule 4 (statement -> expression_statement .)
    FLOAT           reduce using rule 4 (statement -> expression_statement .)
    STRING          reduce using rule 4 (statement -> expression_statement .)
    TRUE            reduce using rule 4 (statement -> expression_statement .)
    FALSE           reduce using rule 4 (statement -> expression_statement .)
    NULL            reduce using rule 4 (statement -> expression_statement .)
    LBRACKET        reduce using rule 4 (statement -> expression_statement .)
    NEW             reduce using rule 4 (statement -> expression_statement .)
    ID              reduce using rule 4 (statement -> expression_statement .)
    $end            reduce using rule 4 (statement -> expression_statement .)
    RBRACE          reduce using rule 4 (statement -> expression_statement .)


state 5

    (5) statement -> print_statement .

    ECHO            reduce using rule 5 (statement -> print_statement .)
    IF              reduce using rule 5 (statement -> print_statement .)
    CLASS           reduce using rule 5 (statement -> print_statement .)
    PHP_OPEN        reduce using rule 5 (statement -> print_statement .)
    PHP_CLOSE       reduce using rule 5 (statement -> print_statement .)
    WHILE           reduce using rule 5 (statement -> print_statement .)
    FUNCTION        reduce using rule 5 (statement -> print_statement .)
    FOR             reduce using rule 5 (statement -> print_statement .)
    RETURN          reduce using rule 5 (statement -> print_statement .)
    VARIABLE        reduce using rule 5 (statement -> print_statement .)
    MINUS           reduce using rule 5 (statement -> print_statement .)
    LNOT            reduce using rule 5 (statement -> print_statement .)
    LPAREN          reduce using rule 5 (statement -> print_statement .)
    NUMBER          reduce using rule 5 (statement -> print_statement .)
    FLOAT           reduce using rule 5 (statement -> print_statement .)
    STRING          reduce using rule 5 (statement -> print_statement .)
    TRUE            reduce using rule 5 (statement -> print_statement .)
    FALSE           reduce using rule 5 (statement -> print_statement .)
    NULL            reduce using rule 5 (statement -> print_statement .)
    LBRACKET        reduce using rule 5 (statement -> print_statement .)
    NEW             reduce using rule 5 (statement -> print_statement .)
    ID              reduce using rule 5 (statement -> print_statement .)
    $end            reduce using rule 5 (statement -> print_statement .)
    RBRACE          reduce using rule 5 (statement -> print_statement .)


state 6

    (6) statement -> if_statement .

    ECHO            reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    CLASS           reduce using rule 6 (statement -> if_statement .)
    PHP_OPEN        reduce using rule 6 (statement -> if_statement .)
    PHP_CLOSE       reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    FUNCTION        reduce using rule 6 (statement -> if_statement .)
    FOR             reduce using rule 6 (statement -> if_statement .)
    RETURN          reduce using rule 6 (statement -> if_statement .)
    VARIABLE        reduce using rule 6 (statement -> if_statement .)
    MINUS           reduce using rule 6 (statement -> if_statement .)
    LNOT            reduce using rule 6 (statement -> if_statement .)
    LPAREN          reduce using rule 6 (statement -> if_statement .)
    NUMBER          reduce using rule 6 (statement -> if_statement .)
    FLOAT           reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    TRUE            reduce using rule 6 (statement -> if_statement .)
    FALSE           reduce using rule 6 (statement -> if_statement .)
    NULL            reduce using rule 6 (statement -> if_statement .)
    LBRACKET        reduce using rule 6 (statement -> if_statement .)
    NEW             reduce using rule 6 (statement -> if_statement .)
    ID              reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    RBRACE          reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> class_definition .

    ECHO            reduce using rule 7 (statement -> class_definition .)
    IF              reduce using rule 7 (statement -> class_definition .)
    CLASS           reduce using rule 7 (statement -> class_definition .)
    PHP_OPEN        reduce using rule 7 (statement -> class_definition .)
    PHP_CLOSE       reduce using rule 7 (statement -> class_definition .)
    WHILE           reduce using rule 7 (statement -> class_definition .)
    FUNCTION        reduce using rule 7 (statement -> class_definition .)
    FOR             reduce using rule 7 (statement -> class_definition .)
    RETURN          reduce using rule 7 (statement -> class_definition .)
    VARIABLE        reduce using rule 7 (statement -> class_definition .)
    MINUS           reduce using rule 7 (statement -> class_definition .)
    LNOT            reduce using rule 7 (statement -> class_definition .)
    LPAREN          reduce using rule 7 (statement -> class_definition .)
    NUMBER          reduce using rule 7 (statement -> class_definition .)
    FLOAT           reduce using rule 7 (statement -> class_definition .)
    STRING          reduce using rule 7 (statement -> class_definition .)
    TRUE            reduce using rule 7 (statement -> class_definition .)
    FALSE           reduce using rule 7 (statement -> class_definition .)
    NULL            reduce using rule 7 (statement -> class_definition .)
    LBRACKET        reduce using rule 7 (statement -> class_definition .)
    NEW             reduce using rule 7 (statement -> class_definition .)
    ID              reduce using rule 7 (statement -> class_definition .)
    $end            reduce using rule 7 (statement -> class_definition .)
    RBRACE          reduce using rule 7 (statement -> class_definition .)


state 8

    (8) statement -> php_open .

    ECHO            reduce using rule 8 (statement -> php_open .)
    IF              reduce using rule 8 (statement -> php_open .)
    CLASS           reduce using rule 8 (statement -> php_open .)
    PHP_OPEN        reduce using rule 8 (statement -> php_open .)
    PHP_CLOSE       reduce using rule 8 (statement -> php_open .)
    WHILE           reduce using rule 8 (statement -> php_open .)
    FUNCTION        reduce using rule 8 (statement -> php_open .)
    FOR             reduce using rule 8 (statement -> php_open .)
    RETURN          reduce using rule 8 (statement -> php_open .)
    VARIABLE        reduce using rule 8 (statement -> php_open .)
    MINUS           reduce using rule 8 (statement -> php_open .)
    LNOT            reduce using rule 8 (statement -> php_open .)
    LPAREN          reduce using rule 8 (statement -> php_open .)
    NUMBER          reduce using rule 8 (statement -> php_open .)
    FLOAT           reduce using rule 8 (statement -> php_open .)
    STRING          reduce using rule 8 (statement -> php_open .)
    TRUE            reduce using rule 8 (statement -> php_open .)
    FALSE           reduce using rule 8 (statement -> php_open .)
    NULL            reduce using rule 8 (statement -> php_open .)
    LBRACKET        reduce using rule 8 (statement -> php_open .)
    NEW             reduce using rule 8 (statement -> php_open .)
    ID              reduce using rule 8 (statement -> php_open .)
    $end            reduce using rule 8 (statement -> php_open .)
    RBRACE          reduce using rule 8 (statement -> php_open .)


state 9

    (9) statement -> php_close .

    ECHO            reduce using rule 9 (statement -> php_close .)
    IF              reduce using rule 9 (statement -> php_close .)
    CLASS           reduce using rule 9 (statement -> php_close .)
    PHP_OPEN        reduce using rule 9 (statement -> php_close .)
    PHP_CLOSE       reduce using rule 9 (statement -> php_close .)
    WHILE           reduce using rule 9 (statement -> php_close .)
    FUNCTION        reduce using rule 9 (statement -> php_close .)
    FOR             reduce using rule 9 (statement -> php_close .)
    RETURN          reduce using rule 9 (statement -> php_close .)
    VARIABLE        reduce using rule 9 (statement -> php_close .)
    MINUS           reduce using rule 9 (statement -> php_close .)
    LNOT            reduce using rule 9 (statement -> php_close .)
    LPAREN          reduce using rule 9 (statement -> php_close .)
    NUMBER          reduce using rule 9 (statement -> php_close .)
    FLOAT           reduce using rule 9 (statement -> php_close .)
    STRING          reduce using rule 9 (statement -> php_close .)
    TRUE            reduce using rule 9 (statement -> php_close .)
    FALSE           reduce using rule 9 (statement -> php_close .)
    NULL            reduce using rule 9 (statement -> php_close .)
    LBRACKET        reduce using rule 9 (statement -> php_close .)
    NEW             reduce using rule 9 (statement -> php_close .)
    ID              reduce using rule 9 (statement -> php_close .)
    $end            reduce using rule 9 (statement -> php_close .)
    RBRACE          reduce using rule 9 (statement -> php_close .)


state 10

    (10) statement -> while_statement .
